unpackaged/main/default/objects/ET_Invoice_Header__mdt/ET_Invoice_Header__mdt.object-meta.xml
<CustomObject>
    <label>ET Invoice Header</label>
    <pluralLabel>ET Invoice Headers</pluralLabel>
</CustomObject>