unpackaged/main/default/objects/ET_Invoice_Header__mdt/fields/ET_BatchSource__c.field-meta.xml
<CustomField>
    <fullName>ET_BatchSource__c</fullName>
    <label>BatchSource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>