unpackaged/main/default/objects/ET_Invoice_Header__mdt/fields/ET_BillToCustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>ET_BillToCustomerNumber__c</fullName>
    <label>BillToCustomerNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>