unpackaged/main/default/objects/ET_Invoice_Header__mdt/fields/ET_Comments__c.field-meta.xml
<CustomField>
    <fullName>ET_Comments__c</fullName>
    <label>Comments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>