unpackaged/main/default/objects/ET_Invoice_Header__mdt/fields/ET_CustTrxType__c.field-meta.xml
<CustomField>
    <fullName>ET_CustTrxType__c</fullName>
    <label>CustTrxType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>