unpackaged/main/default/objects/ET_Invoice_Header__mdt/fields/ET_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>ET_PaymentMethod__c</fullName>
    <label>PaymentMethod</label>
    <length>100</length>
    <type>Text</type>
</CustomField>