unpackaged/main/default/objects/ET_Invoice_Header__mdt/fields/ET_TransactionCurrency__c.field-meta.xml
<CustomField>
    <fullName>ET_TransactionCurrency__c</fullName>
    <label>TransactionCurrency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>