unpackaged/main/default/objects/ET_Invoice_Header__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ET_BatchSource__c</columns>
    <columns>ET_BillToCustomerNumber__c</columns>
    <columns>ET_CustTrxType__c</columns>
    <columns>ET_PaymentMethod__c</columns>
    <columns>ET_TransactionCurrency__c</columns>
    <columns>ET_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>